--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,12 @@
 .env.yaml
 train_flow-deployment.yaml
 
+#files json processing
+temp_gait_json_files_*
+
+#mediapipe processing examples
+output/
+
 # System files
 .DS_Store
 .ipynb_checkpoints
