--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,55 @@
+absl-py==2.3.0
 appnope==0.1.4
 asttokens==3.0.0
+attrs==25.3.0
+cffi==1.17.1
 comm==0.2.2
+contourpy==1.3.2
+cycler==0.12.1
 debugpy==1.8.14
 decorator==5.2.1
 exceptiongroup==1.3.0
 executing==2.2.0
+flatbuffers==25.2.10
+fonttools==4.58.1
 ipykernel==6.29.5
 ipython==8.37.0
+jax==0.6.1
+jaxlib==0.6.1
 jedi==0.19.2
 jupyter_client==8.6.3
 jupyter_core==5.8.1
+kiwisolver==1.4.8
+matplotlib==3.10.3
 matplotlib-inline==0.1.7
+mediapipe==0.10.21
+ml_dtypes==0.5.1
 nest-asyncio==1.6.0
-numpy==2.2.6
+numpy==1.26.4
+opencv-contrib-python==4.11.0.86
+opencv-python==4.11.0.86
+opt_einsum==3.4.0
 packaging==25.0
 pandas==2.2.3
 parso==0.8.4
 pexpect==4.9.0
+pillow==11.2.1
 platformdirs==4.3.8
 prompt_toolkit==3.0.51
+protobuf==4.25.8
 psutil==7.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
+pycparser==2.22
 Pygments==2.19.1
+pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 pytz==2025.2
 pyzmq==26.4.0
+scipy==1.15.3
+sentencepiece==0.2.0
 six==1.17.0
+sounddevice==0.5.2
 stack-data==0.6.3
 tornado==6.5.1
 traitlets==5.14.3
