--- a/requirements.txt
+++ b/requirements.txt
@@ -1,345 +1,95 @@
-absl-py==2.2.1
-aiofiles==22.1.0
-aiohappyeyeballs==2.6.1
-aiohttp==3.11.14
-aiohttp-cors==0.8.0
-aiosignal==1.3.2
-aiosqlite==0.21.0
-altair==5.5.0
+absl-py==2.3.0
 annotated-types==0.7.0
-ansicolors==1.1.8
 anyio==4.9.0
-archspec @ file:///home/conda/feedstock_root/build_artifacts/archspec_1737352602016/work
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
+appnope==0.1.4
 asttokens==3.0.0
 astunparse==1.6.3
-async-timeout==5.0.1
-atpublic==5.1
 attrs==25.3.0
-babel==2.17.0
-backoff==2.2.1
-backports.tarfile==1.2.0
-beautifulsoup4==4.13.3
-bigframes==1.42.0
-bleach==6.2.0
-blessed==1.20.0
-blinker==1.9.0
-boltons @ file:///home/conda/feedstock_root/build_artifacts/boltons_1733827268945/work
-bq_stats @ file:///tmp/environments/base/pip/packages/bq_stats
-Brotli @ file:///home/conda/feedstock_root/build_artifacts/brotli-split_1725267488082/work
-cachetools==5.5.2
-certifi @ file:///home/conda/feedstock_root/build_artifacts/certifi_1739515848642/work/certifi
-cffi @ file:///home/conda/feedstock_root/build_artifacts/cffi_1725560520483/work
-charset-normalizer @ file:///home/conda/feedstock_root/build_artifacts/charset-normalizer_1735929714516/work
-click==8.1.8
-cloud-tpu-client==0.7
-cloudpickle==3.1.1
-colorama @ file:///home/conda/feedstock_root/build_artifacts/colorama_1733218098505/work
-colorful==0.5.6
+certifi==2025.4.26
+cffi==1.17.1
+charset-normalizer==3.4.2
+click==8.2.1
 comm==0.2.2
-conda @ file:///home/conda/feedstock_root/build_artifacts/conda_1743046454070/work/conda-src
-conda-libmamba-solver @ file:///home/conda/feedstock_root/build_artifacts/conda-libmamba-solver_1742219570693/work/src
-conda-package-handling @ file:///home/conda/feedstock_root/build_artifacts/conda-package-handling_1736345463896/work
-conda_package_streaming @ file:///home/conda/feedstock_root/build_artifacts/conda-package-streaming_1741620732069/work
-contourpy==1.3.1
-cryptography==44.0.2
-cupy-cuda12x==13.4.1
+contourpy==1.3.2
 cycler==0.12.1
-dacite==1.9.2
-db-dtypes==1.4.2
-debugpy==1.8.13
+debugpy==1.8.14
 decorator==5.2.1
-defusedxml==0.7.1
-Deprecated==1.2.18
-distlib==0.3.9
-distro @ file:///home/conda/feedstock_root/build_artifacts/distro_1734729835256/work
-dm-tree==0.1.9
-docker==7.1.0
-docstring_parser==0.16
-entrypoints==0.4
-exceptiongroup==1.2.2
+exceptiongroup==1.3.0
 executing==2.2.0
-Farama-Notifications==0.0.4
 fastapi==0.115.12
-fastjsonschema==2.21.1
-fastrlock==0.8.3
-filelock==3.18.0
 flatbuffers==25.2.10
-fonttools==4.56.0
-fqdn==1.5.1
-frozendict @ file:///home/conda/feedstock_root/build_artifacts/frozendict_1728841320383/work
-frozenlist==1.5.0
-fsspec==2025.3.0
+fonttools==4.58.1
 gast==0.6.0
-gcsfs==2025.3.0
-geopandas==1.0.1
-gitdb==4.0.12
-GitPython==3.1.44
-google-api-core==2.24.2
-google-api-python-client==2.166.0
-google-auth==2.38.0
-google-auth-httplib2==0.2.0
-google-auth-oauthlib==1.2.1
-google-cloud-aiplatform==1.86.0
-google-cloud-artifact-registry==1.15.2
-google-cloud-bigquery==3.31.0
-google-cloud-bigquery-connection==1.18.2
-google-cloud-bigquery-storage==2.30.0
-google-cloud-bigtable==2.30.0
-google-cloud-core==2.4.3
-google-cloud-datastore==1.15.5
-google-cloud-functions==1.20.2
-google-cloud-iam==2.18.3
-google-cloud-language==2.17.1
-google-cloud-monitoring==2.27.1
-google-cloud-pubsub==2.29.0
-google-cloud-resource-manager==1.14.2
-google-cloud-storage==2.19.0
-google-crc32c==1.7.1
 google-pasta==0.2.0
-google-resumable-media==2.7.2
-googleapis-common-protos==1.69.2
-gpustat==1.0.0
-greenlet==3.1.1
-grpc-google-iam-v1==0.14.2
-grpcio==1.71.0
-grpcio-status==1.49.0rc1
-gymnasium==1.0.0
-h11==0.14.0
-h2 @ file:///home/conda/feedstock_root/build_artifacts/h2_1738578511449/work
-h5py==3.13.0
-hpack @ file:///home/conda/feedstock_root/build_artifacts/hpack_1737618293087/work
-htmlmin==0.1.12
-httplib2==0.22.0
-httptools==0.6.4
-humanize==4.12.2
-hyperframe @ file:///home/conda/feedstock_root/build_artifacts/hyperframe_1737618333194/work
-idna @ file:///home/conda/feedstock_root/build_artifacts/idna_1733211830134/work
-ImageHash==4.3.1
-imbalanced-learn==0.13.0
-importlib_metadata==8.6.1
+grpcio==1.73.0
+h11==0.16.0
+h5py==3.14.0
+idna==3.10
 ipykernel==6.29.5
-ipython==8.21.0
-ipython-genutils==0.2.0
-ipython-sql==0.5.0
-ipywidgets==8.1.5
-isoduration==20.11.0
-jaraco.classes==3.4.0
-jaraco.context==6.0.1
-jaraco.functools==4.1.0
+ipython==8.37.0
+jax==0.6.1
+jaxlib==0.6.1
 jedi==0.19.2
-jeepney==0.9.0
-jellyfish==1.1.0
-Jinja2==3.1.6
-joblib==1.4.2
-json5==0.10.0
-jsonpatch @ file:///home/conda/feedstock_root/build_artifacts/jsonpatch_1733814567314/work
-jsonpointer @ file:///home/conda/feedstock_root/build_artifacts/jsonpointer_1725302897999/work
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-jupyter-events==0.12.0
-jupyter-server-mathjax==0.2.6
-jupyter-ydoc==0.2.5
-jupyter_client==7.4.9
-jupyter_core==5.7.2
-jupyter_server==2.15.0
-jupyter_server_fileid==0.9.3
-jupyter_server_terminals==0.5.3
-jupyter_server_ydoc==0.8.0
-jupyterlab==3.6.8
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.27.3
-jupyterlab_widgets==3.0.13
+jupyter_client==8.6.3
+jupyter_core==5.8.1
 keras==3.10.0
-keyring==25.6.0
-keyrings.google-artifactregistry-auth==1.1.2
-kfp==2.5.0
-kfp-pipeline-spec==0.2.2
-kfp-server-api==2.0.5
 kiwisolver==1.4.8
-kubernetes==26.1.0
 libclang==18.1.1
-libmambapy @ file:///home/conda/feedstock_root/build_artifacts/mamba-split_1743062582999/work/libmambapy
-linkify-it-py==2.0.3
-llvmlite==0.44.0
-lz4==4.4.3
 Markdown==3.8
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
-matplotlib==3.10.0
+matplotlib==3.10.3
 matplotlib-inline==0.1.7
-mdit-py-plugins==0.4.2
 mdurl==0.1.2
-memray==1.16.0
-menuinst @ file:///home/conda/feedstock_root/build_artifacts/menuinst_1731146967497/work
-mistune==3.1.3
+mediapipe==0.10.21
 ml_dtypes==0.5.1
-more-itertools==10.6.0
-msgpack==1.1.0
-multidict==6.2.0
-multimethod==1.12
 namex==0.1.0
-narwhals==1.32.0
-nbclassic==1.2.0
-nbclient==0.10.2
-nbconvert==7.16.6
-nbdime==3.2.0
-nbformat==5.10.4
 nest-asyncio==1.6.0
-networkx==3.4.2
-notebook==6.5.7
-notebook_shim==0.2.4
-numba==0.61.0
-numpy==2.1.3
-nvidia-ml-py==11.495.46
-oauth2client==4.1.3
-oauthlib==3.2.2
-opencensus==0.11.4
-opencensus-context==0.1.3
-opentelemetry-api==1.31.1
-opentelemetry-exporter-otlp==1.15.0
-opentelemetry-exporter-otlp-proto-grpc==1.15.0
-opentelemetry-exporter-otlp-proto-http==1.15.0
-opentelemetry-proto==1.15.0
-opentelemetry-sdk==1.31.1
-opentelemetry-semantic-conventions==0.52b1
+numpy==1.26.4
+opencv-contrib-python==4.11.0.86
+opencv-python==4.11.0.86
 opt_einsum==3.4.0
 optree==0.16.0
-ormsgpack==1.7.0
-overrides==7.7.0
-packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1733203243479/work
+packaging==25.0
 pandas==2.2.3
-pandas-gbq==0.28.0
-pandas-profiling==3.6.6
-pandocfilters==1.5.1
-papermill==2.6.0
 parso==0.8.4
-parsy==2.1
-patsy==1.0.1
 pexpect==4.9.0
-phik==0.12.4
-pillow==11.1.0
-platformdirs @ file:///home/conda/feedstock_root/build_artifacts/platformdirs_1733232627818/work
-plotly==6.0.1
-pluggy @ file:///home/conda/feedstock_root/build_artifacts/pluggy_1733222765875/work
-prettytable==3.16.0
-prometheus_client==0.21.1
-prompt_toolkit==3.0.50
-propcache==0.3.1
-proto-plus==1.26.1
-protobuf==3.20.3
-psutil==5.9.3
+pillow==11.2.1
+platformdirs==4.3.8
+prompt_toolkit==3.0.51
+protobuf==4.25.8
+psutil==7.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
-puremagic==1.28
-py-spy==0.4.0
-pyarrow==19.0.1
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
-pycosat @ file:///home/conda/feedstock_root/build_artifacts/pycosat_1732588391741/work
-pycparser @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_pycparser_1733195786/work
-pydantic==2.11.0
-pydantic_core==2.33.0
-pydata-google-auth==1.9.1
-pydeck==0.9.1
+pycparser==2.22
+pydantic==2.11.5
+pydantic_core==2.33.2
 Pygments==2.19.1
-pyogrio==0.10.0
-pyOpenSSL==25.0.0
 pyparsing==3.2.3
-pyproj==3.7.1
-PySocks @ file:///home/conda/feedstock_root/build_artifacts/pysocks_1733217236728/work
 python-dateutil==2.9.0.post0
-python-dotenv==1.1.0
-python-json-logger==3.3.0
 pytz==2025.2
-PyWavelets==1.8.0
-PyYAML==6.0.2
-pyzmq==26.3.0
-ray==2.44.1
-referencing==0.36.2
-requests @ file:///home/conda/feedstock_root/build_artifacts/requests_1733217035951/work
-requests-oauthlib==2.0.0
-requests-toolbelt==0.10.1
-retrying==1.3.4
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rich==13.9.4
-rpds-py==0.24.0
-rsa==4.9
-ruamel.yaml @ file:///home/conda/feedstock_root/build_artifacts/ruamel.yaml_1736248022260/work
-ruamel.yaml.clib @ file:///home/conda/feedstock_root/build_artifacts/ruamel.yaml.clib_1728724455198/work
-scikit-learn==1.6.1
-scipy==1.15.2
-seaborn==0.13.2
-SecretStorage==3.3.3
-Send2Trash==1.8.3
-shapely==2.0.7
+pyzmq==26.4.0
+requests==2.32.4
+rich==14.0.0
+scipy==1.15.3
+sentencepiece==0.2.0
 six==1.17.0
-sklearn-compat==0.1.3
-smart-open==7.1.0
-smmap==5.0.2
 sniffio==1.3.1
-soupsieve==2.6
-SQLAlchemy==2.0.40
-sqlglot==26.12.0
-sqlparse==0.5.3
+sounddevice==0.5.2
 stack-data==0.6.3
-starlette==0.46.1
-statsmodels==0.14.4
-streamlit==1.45.1
-tabulate==0.9.0
-tenacity==9.0.0
+starlette==0.46.2
 tensorboard==2.19.0
 tensorboard-data-server==0.7.2
-tensorboardX==2.6.2.2
 tensorflow==2.19.0
 tensorflow-io-gcs-filesystem==0.37.1
 termcolor==3.1.0
-terminado==0.18.1
-textual==3.0.0
-threadpoolctl==3.6.0
-tinycss2==1.4.0
-toml==0.10.2
-tomli==2.2.1
-toolz==1.0.0
-tornado==6.4.2
-tqdm @ file:///home/conda/feedstock_root/build_artifacts/tqdm_1735661334605/work
+tornado==6.5.1
 traitlets==5.14.3
-truststore @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_truststore_1739009763/work
-typeguard==4.4.2
-types-python-dateutil==2.9.0.20241206
-typing-inspection==0.4.0
-typing_extensions==4.13.0
+typing-inspection==0.4.1
+typing_extensions==4.14.0
 tzdata==2025.2
-uc-micro-py==1.0.3
-uri-template==1.3.0
-uritemplate==4.1.1
-urllib3==1.26.20
-uvicorn==0.34.0
-uvloop==0.21.0
-virtualenv==20.29.3
-visions==0.8.1
-watchdog==6.0.0
-watchfiles==1.0.4
+urllib3==2.4.0
+uvicorn==0.34.3
 wcwidth==0.2.13
-webcolors==24.11.1
-webencodings==0.5.1
-websocket-client==1.8.0
-websockets==15.0.1
 Werkzeug==3.1.3
-widgetsnbextension==4.0.13
-wordcloud==1.9.4
 wrapt==1.17.2
-y-py==0.6.2
-yarl==1.18.3
-ydata-profiling==4.16.1
-ypy-websocket==0.8.4
-zipp==3.21.0
-zstandard==0.23.0
-
-# API
-fastapi==0.108.0
-pytz
-uvicorn
