--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,7 @@ ipython==8.37.0
 jax==0.6.1
 jaxlib==0.6.1
 jedi==0.19.2
+joblib==1.5.1
 jupyter_client==8.6.3
 jupyter_core==5.8.1
 keras==3.10.0
@@ -67,6 +68,7 @@ pydantic_core==2.33.2
 Pygments==2.19.1
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
+python-multipart==0.0.20
 pytz==2025.2
 pyzmq==26.4.0
 requests==2.32.4
@@ -93,4 +95,3 @@ uvicorn==0.34.3
 wcwidth==0.2.13
 Werkzeug==3.1.3
 wrapt==1.17.2
-google-cloud-storage
